--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,4 +42,6 @@ jobs:
       - run: npm ci
       - run: npm run semantic-release
         env:
+          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
