--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,3 +45,23 @@ jobs:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+
+    publish-marketplace:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 16
+          registry-url: https://registry.npmjs.org/
+
+      - name: Install the dependencies
+        run: npm ci          
+
+      - name: Install vsce
+        run: npm i -g vsce
+
+      - name: Publish
+        run:  vsce publish -p ${{ secrets.VSCE_PAT }}
